test/sema/exercise/struct_instantiation_invalid_initializer_expression.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number,
}

struct S2 {}

fn main(): void {
  S { x: S2 {} };
  // CHECK: [[# @LINE - 1 ]]:13: error: a field of type 'number' cannot be initialized with an expression of type 'S2'
  // CHECK: [[# @LINE - 2 ]]:5: error: field 'x' is not initialized
}
